--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,18 +14,30 @@
     <string name="reset">Reset</string>
     <string name="solver_instructions">Fill in the numbers to solve, leaving the empty space blank.</string>
     <string name="solve">Solve</string>
-    <string name="solver_algorithm_description">The solver finds the minimum number of moves to solve
-        a random input puzzle, using the A* graph searching algorithm, which uses heuristics to guide
-        its search.
-        \n\nThe heuristic function in this algorithm uses the sum of the manhattan distance
-        (sum of the absolute differences of the coordinates of each tile compared to each tile on
-        the solved puzzle) and the number of moves made so far. Intuitively, a move that results in a
-        puzzle with tiles closer to the solved puzzle, and that reaches this state with the least
-        number of moves is the best one.
-        \n\nThe algorithm is implemented using a priority queue with search nodes containing a single puzzle
-        state, a priority, and the previous search node. At each step, all possible nodes containing
-        adjacent puzzle instances are added, and the one with lowest priority is polled. Once the solved
-        puzzle is reached, the steps are retraced by calling the previous node of each search node.
+    <string name="solver_algorithm_description">
+       The solver finds the minimum number of moves (the least-cost path) to solve a random input
+        puzzle, using the A* graph searching algorithm, which uses heuristics to guide its search
+        (a best-first search). The heuristic in this algorithm uses the manhattan distance, which
+        is the sum of the displacements of each tile from its solved state.
+        \n\n
+        The heuristic function in this algorithm uses the sum of the manhattan distance and the
+        number of moves made so far. Intuitively, a move that results in a puzzle with tiles closer
+        to the solved puzzle, and that reaches this state with the least number of moves is the
+        best one.
+        \n\n
+    The algorithm is implemented using search nodes containing the puzzle state, its priority, and
+        the previous search node. Because each new search node from a new board configuration is
+        the parent of all its neighbouring search nodes, the algorithm essentially uses a tree of
+        paths rooted at the starting position. At each step, all possible search nodes containing
+        adjacent puzzle instances are added to the tree (with their respective priorities), and the
+        one with lowest priority is removed. Once the solved puzzle is reached, the steps are
+        retraced by calling each node\'s previous search node.
+        \n\n
+    An algorithm is guaranteed to be optimal if its heuristic is admissible; i.e., the heuristic
+        never overestimates the actual solution\'s length. Because the algorithm continues to search
+        the lowest priority puzzle state (not necessarily in any order) until the goal state is
+        reached with lowest priority, the route it took to reach the goal must be the optimal
+        solution.
     </string>
     <string name="solver_algorithm">Solver Algorithm</string>
     <string name="credits">Created with Kotlin by Calvin Liu, 2020</string>
